Refactor UDF scalars to use new function registry.