@@ -22,13 +22,11 @@
 
 package io.crate.expression.udf;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import io.crate.analyze.FunctionArgumentDefinition;
 import io.crate.analyze.TableDefinitions;
 import io.crate.analyze.relations.DocTableRelation;
-import io.crate.metadata.FunctionIdent;
-import io.crate.metadata.FunctionImplementation;
+import io.crate.metadata.FuncResolver;
+import io.crate.metadata.FunctionName;
 import io.crate.metadata.Functions;
 import io.crate.metadata.RelationName;
 import io.crate.metadata.doc.DocTableInfo;
@@ -39,13 +37,13 @@ import io.crate.types.DataTypes;
 import org.junit.Before;
 import org.junit.Test;
 
-import javax.script.ScriptException;
+import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static io.crate.testing.SymbolMatchers.isLiteral;
+import static java.util.stream.Collectors.toList;
 
 
 public class UserDefinedFunctionsTest extends UdfUnitTest {
@@ -53,7 +51,7 @@ public class UserDefinedFunctionsTest extends UdfUnitTest {
     private Functions functions;
     private SqlExpressions sqlExpressions;
 
-    private Map<FunctionIdent, FunctionImplementation> functionImplementations = new HashMap<>();
+    private Map<FunctionName, List<FuncResolver>> functionImplementations = new HashMap<>();
 
     @Before
     public void prepare() throws Exception {
@@ -61,33 +59,47 @@ public class UserDefinedFunctionsTest extends UdfUnitTest {
             .addTable(TableDefinitions.USER_TABLE_DEFINITION)
             .build();
         DocTableInfo users = sqlExecutor.schemas().getTableInfo(new RelationName("doc", "users"));
-        sqlExpressions = new SqlExpressions(
-            ImmutableMap.of(users.ident(), new DocTableRelation(users)));
+        sqlExpressions = new SqlExpressions(Map.of(users.ident(), new DocTableRelation(users)));
         functions = sqlExpressions.functions();
         udfService.registerLanguage(DUMMY_LANG);
     }
 
-    private void registerUserDefinedFunction(String lang, String schema, String name, DataType returnType, List<DataType> types, String definition) throws ScriptException {
-        UserDefinedFunctionMetaData udfMeta = new UserDefinedFunctionMetaData(
+    private void registerUserDefinedFunction(
+        String lang,
+        String schema,
+        String name,
+        DataType returnType,
+        List<DataType> types,
+        String definition) {
+
+        var udf = new UserDefinedFunctionMetaData(
             schema,
             name,
-            types.stream().map(FunctionArgumentDefinition::of).collect(Collectors.toList()),
+            types.stream().map(FunctionArgumentDefinition::of).collect(toList()),
             returnType,
             lang,
-            definition
-        );
+            definition);
 
-        functionImplementations.put(
-            new FunctionIdent(schema, name, types),
-            udfService.getLanguage(lang).createFunctionImplementation(udfMeta)
-        );
-        functions.registerUdfResolversForSchema(schema, functionImplementations);
+        var functionName = new FunctionName(udf.schema(), udf.name());
+        var resolvers = functionImplementations.computeIfAbsent(
+            functionName, k -> new ArrayList<>());
+        resolvers.add(udfService.buildFunctionResolver(udf));
+        functions.registerUdfFunctionImplementationsForSchema(
+            schema,
+            functionImplementations);
     }
 
     @Test
-    public void testOverloadingBuiltinFunctions() throws Exception {
-        registerUserDefinedFunction(DUMMY_LANG.name(), "test", "subtract", DataTypes.INTEGER, ImmutableList.of(DataTypes.INTEGER, DataTypes.INTEGER), "function subtract(a, b) { return a + b; }");
-        String expr = "test.subtract(2::integer, 1::integer)";
-        assertThat(sqlExpressions.asSymbol(expr), isLiteral(DummyFunction.RESULT));
+    public void testOverloadingBuiltinFunctions() {
+        registerUserDefinedFunction(
+            DUMMY_LANG.name(),
+            "test",
+            "subtract",
+            DataTypes.INTEGER,
+            List.of(DataTypes.INTEGER, DataTypes.INTEGER),
+            "function subtract(a, b) { return a + b; }");
+        assertThat(
+            sqlExpressions.asSymbol("test.subtract(2::integer, 1::integer)"),
+            isLiteral(DummyFunction.RESULT));
     }
 }
